tests/NormalTests/paczka1/small_fuzzy/30179344.err
Error in line 3: RIpIM A816 86,2
Error in line 5: RIpIM S230 9,0
